--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 </head>
 <body>
   <header>
-    <a href="#" class="logo">Logo du site</a>
-    
+    <a href="#" class="logo">
+                <img src="img/image.png">Logo</a>
     <nav>
         <ul class="menu">
             <li>
