ajoute contact.html

--- a/index.html
+++ b/index.html
@@ -42,11 +42,20 @@
     </nav>
   </header>    
   <main>
-    <h1>Titre principal de la page</h1>
-    <p>Un paragraphe pas trop long à lire</p>
+    <h1>Mon CV</h1>
+    <p></p>
+
+<section>
+    <h2>Contacts</h2>
+        <div>
+                <div><strong>Email:</strong> sofiia.borodina.divtec.ch</div>
+                <div><strong>Phone:</strong> +41 76 345 37 23</div>
+        </div>
+    </section>
+      
   </main>
   <footer>
-    &copy;2021 Laure Dinateur
+    &copy;2024 Sofiia Borodina
   </footer>
 </body>
 </html>
