--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
   <header>
     <a href="#" class="logo">
-                <img src="img/image.png">Logo</a>
+                <img src="img/image.png" alt="Logo" width="200" height="200">
     <nav>
         <ul class="menu">
             <li>
