--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- Viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Titre de la page -->
-    <title>CV de Sofiia Borodina</title>
+    <title>Sofiia Borodina</title>
     <!-- Auteur -->
     <meta name="author" content="Sofiia Borodina">
     <!-- Description de la page -->
