--- a/index.html
+++ b/index.html
@@ -40,9 +40,10 @@
             </li>
         </ul>
     </nav>
-  </header>    
+  </header>
+    
   <main>
-    <h1>CV de Sofiia Borodina</h1>
+    <h1>Sofiia Borodina</h1>
     <p>exemple</p>
       
       <section>
