--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
   <header class="header">
             <div class="profile-image">
-                <img src="img/image.png" alt="Sofiia Borodina">
+                <img src="img/1868017_h7OoPmm8.png" alt="Sofiia Borodina">
             </div>
             <div class="name-title">
                 <h1>Sofiia Borodina</h1>
