Update index.html formation

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <section class="section">
           <h2>Éducation</h2>
             <ul>
-                <li>École des Métiers Techniques | 2024-2025 - Études </li>
+                <li>École des Métiers Techniques | 2024-2025 - Formation professionnelle initiale</li>
                 <li>École Culture Générale à Delémont | 2023-2024 - Filière de transition</li>
                 <li>École secondaire n° 28 étapes I-III d'Odessa | 2011-2022 - Études secondaires complètes</li>
                 <li>Centre de formation informatique Main Macin Academy | 2023-2024 - Python (cours en ligne)</li>
