--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Auteur -->
     <meta name="author" content="Sofiia Borodina">
     <!-- Description de la page -->
-    <meta name="description" content="CV de Sofiia Borodina étudiante en informatique">
+    <meta name="description" content="CV de Sofiia Borodina">
     <!-- Reset CSS Normalize CSS -->
     <link rel="stylesheet" href="css/normalize.css"/>
     <!-- CSS de base -->
@@ -45,7 +45,8 @@
                 <li>École Culture Générale à Delémont | 2023-2024 - Filière de transition</li>
                 <li>École secondaire n° 28 étapes I-III d'Odessa | 2011-2022 - Études secondaires complètes</li>
                 <li>Centre de formation informatique Main Macin Academy | 2023-2024 - Python (cours en ligne)</li>
-                <li>Académie d'informatique STEP | 2017-2022 - Domaine de connaissances: programmation web, création de sites web, développement de logiciels, cybersécurité informatique</li>
+                <li>Académie d'informatique STEP | 2017-2022 - Domaine de connaissances: programmation web, création de sites web,
+                    <br>développement de logiciels, cybersécurité informatique</li></br>
             </ul>
       </section>
       
