Update index.html next line br

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                 <li>École Culture Générale à Delémont | 2023-2024 - Filière de transition</li>
                 <li>École secondaire n° 28 étapes I-III d'Odessa | 2011-2022 - Études secondaires complètes</li>
                 <li>Centre de formation informatique Main Macin Academy | 2023-2024 - Python (cours en ligne)</li>
-                <li>Académie d'informatique STEP | 2017-2022 - Domaine de connaissances: programmation web, création de sites web,
-                    <br>développement de logiciels, cybersécurité informatique</li></br>
+                <li>Académie d'informatique STEP | 2017-2022 - Domaine de connaissances: programmation web, 
+                    <br>création de sites web, développement de logiciels, cybersécurité informatique</li></br>
             </ul>
       </section>
       
