--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
 <body>
   <header class="header">
             <div class="profile-image">
+                <!-- Lien sur image qui ouvre l'image dans une nouvel onglet -->
                 <img src="img/1868017_h7OoPmm8.png" alt="Sofiia Borodina">
             </div>
+      <!-- Ajouter menu de navigation <nav> -->    
   </header>
 
     
@@ -80,8 +82,9 @@
                 <li>Résistante au stress</li>
             </ul>
       </section>
-    
+<!-- TODO fermer baliser main -->
     <footer class="footer">
+        <!-- Ajouter lien qui ouvre email -->
         <p>Email: sofiiia.borodina@divssa.ch</p>
         <p>Téléphone: +41 766 053 564</p>
         <p>Adresse: Rues des Planchettes 51a, CH-2900, Porrentruy</p>
