--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             </ul>
       </section>
       
-      <section id="Coordonnees" class="section">
+      <section id="coordonnees" class="section">
           <h2>Coordonnées</h2>
             <ul>
                 <li>Email: sofiia.borodina@divtec.ch</li>
