--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="profile-image">
                 <!-- Lien sur image qui ouvre l'image dans une nouvel onglet -->
                 <a href="img/1868017_h7OoPmm8.png" target="_blank">
-                    <img src="img/1868017_h7OoPmm8.png" alt="moi">
+                    <img src="img/1868017_h7OoPmm8.png" alt="Sofiia Borodina">
                 </a>
             </div>
       <!-- Ajouter menu de navigation <nav> --> 
