--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <li>École secondaire n° 28 étapes I-III d'Odessa | 2011-2022 - Études secondaires complètes</li>
                 <li>Centre de formation informatique Main Academy | 2023-2024 - Python (cours en ligne)</li>
                 <li>Académie d'informatique STEP | 2017-2022 - Domaine de connaissances: programmation web, 
-                    <br>création de sites web, développement de logiciels, cybersécurité informatique</li></br>
+                    <br>création de sites web, développement de logiciels, cybersécurité informatique</li>
             </ul>
       </section>
       
